# web3-wallet-mcp-server

./: .gitignore  Cargo.toml  LICENSE  README.md  curl_examples.sh  start_server.sh
src/: error.rs  ethereum.rs  lib.rs  logging.rs  main.rs  mcp_server.rs  tests.rs  tools.rs  types.rs
