[package]
name = "web3_wallet"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ethers = { version = "2.0", features = ["rustls"] }
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
